manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-app
  namespace: python-app
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: app.yevhent.devops4.test-danit.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: python-app
            port:
              number: 80
